cmake_minimum_required(VERSION 3.20)
project(google)

set(CMAKE_CXX_STANDARD 17)

add_executable(google main.cpp main.h sort.cpp sort.h list.cpp list.h math.cpp math.h search.cpp search.h string.cpp string.h dp.cpp dp.h play.cpp tree.cpp tree.h bit.cpp bit.h peak.cpp tree_binary_tree.cpp tree_binary_search_tree.cpp tree_heap.cpp list_link_list.cpp list_hash_table.cpp list_array_list.cpp list_matrix.cpp sort_basic.cpp)
